# http_server

./: LICENCE  README.md  TODO.md  constant.py  parser.py  pyproject.toml  tcp.py
docs/: class_diagram.md  flow.md
src/: HttpInput.py  StaticFilesServer.py  app.py  client_tcp.py  constant.py  enpoint.py  formatter.py  middelware.py  parser.py
test/: conftest.py  http_formater_test.py  http_parser_test.py  launch_server.py
